First k8d app in minikube

--- a/K8s/02_docker_app/Dockerfile
+++ b/K8s/02_docker_app/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:6.2.2
 WORKDIR /app
-ADD . /app
+ADD index.js /app
+ADD package.json /app
 RUN npm install
-EXPOSE 300
+EXPOSE 3000
 CMD npm start
